--- a/Trial Project/ServerSide/.settings/org.eclipse.wst.common.component
+++ b/Trial Project/ServerSide/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="ServerSide">
+    <wb-module deploy-name="HTTPServerSide">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/ServerSide/build/classes"/>
-        <property name="context-root" value="ServerSide"/>
+        <property name="java-output-path" value="/HTTPServerSide/build/classes"/>
+        <property name="context-root" value="HTTPServerSide"/>
     </wb-module>
 </project-modules>
